Find information previous event

--- a/feature_engineering_2.ipynb
+++ b/feature_engineering_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.ndimage import gaussian_filter"
+    "import math\n",
+    "import json"
    ]
   },
   {
@@ -25,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TIDY_DATA_CSV = r\"Dataset/tidyData.csv\""
+    "PATH_TIDY_DATA_CSV = r\"Dataset/tidyData_original.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +373,7 @@
        "9  Philipp Grubauer       Nick Cousins  Wrist Shot        NaN    False  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +416,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def Determine_Shooting_Net(home_team, shoter_tem, period):\n",
+    "    \n",
+    "#     is_home_shot = True \n",
+    "#     if home_team.lower() != shoter_tem.lower():\n",
+    "#         is_home_shot = False    # Away shot\n",
+    "\n",
+    "#     net_coordinates = None\n",
+    "#     if is_home_shot:\n",
+    "#         if period % 2 == 1:\n",
+    "#             net_coordinates = (89, 0)\n",
+    "#         else:\n",
+    "#             net_coordinates = (-89, 0)\n",
+    "#     else:    # away\n",
+    "#         if period % 2 == 1:\n",
+    "#             net_coordinates = (-89, 0)\n",
+    "#         else:\n",
+    "#             net_coordinates = (89, 0)\n",
+    "    \n",
+    "#     return net_coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Determine_Shooting_Net(shot_coor_x, shot_coor_y):\n",
+    "    net_coordinates = None\n",
+    "    if shot_coor_x > 0:\n",
+    "        net_coordinates = (89, 0)\n",
+    "    else:\n",
+    "        net_coordinates = (-89, 0)\n",
+    "    return net_coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Calculate_Distance(point1, point2):\n",
+    "    x1, y1 = point1\n",
+    "    x2, y2 = point2\n",
+    "    distance = ((x2 - x1) ** 2 + (y2 - y1) ** 2) ** 0.5\n",
+    "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Calculate_Shot_Angle(shot_location, net_location):\n",
+    "    shot_x, shot_y = shot_location\n",
+    "    net_x, net_y = net_location\n",
+    "\n",
+    "    dx = net_x - shot_x\n",
+    "    dy = net_y - shot_y\n",
+    "    angle = math.atan2(dy, dx)\n",
+    "    return math.degrees(angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "list_game_seconds = []\n",
     "list_game_period = []\n",
     "list_coordinates_x = []\n",
@@ -428,47 +500,373 @@
     "    game_period = shot_event['period']\n",
     "    coor_x = shot_event['x-coordinate']\n",
     "    coor_y = shot_event['y-coordinate']\n",
-    "    "
+    "    \n",
+    "    # Extract the location of net\n",
+    "    # home_team = shot_event['homeTeam']\n",
+    "    # shoter_tem = shot_event['teamName']\n",
+    "    net_coordinates = Determine_Shooting_Net(coor_x, coor_y)\n",
+    "    shot_distance = Calculate_Distance((coor_x, coor_y), net_coordinates)\n",
+    "    shot_angle = Calculate_Shot_Angle((coor_x, coor_y), net_coordinates)\n",
+    "    shot_type = shot_event['shotType']\n",
+    "    \n",
+    "    list_game_seconds.append(game_seconds)\n",
+    "    list_game_period.append(game_period)\n",
+    "    list_coordinates_x.append(coor_x)\n",
+    "    list_coordinates_y.append(coor_y)\n",
+    "    list_shot_distance.append(shot_distance)\n",
+    "    list_shot_angle.append(shot_angle)\n",
+    "    list_shot_type.append(shot_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Add feature of previous event\n",
+    "\n",
+    "- We will find event based on `dateTime`. For example, \"2019-03-30T01:09:28Z\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Determine_Shooting_Net(home_team, shoter_tem, period):\n",
-    "    \n",
-    "    is_home_shot = True \n",
-    "    if home_team.lower() != shoter_tem.lower():\n",
-    "        is_home_shot = False    # Away shot\n",
-    "\n",
-    "    if is_home_shot:\n",
-    "\n",
-    "    else:\n",
-    "        pass"
+    "path_json_file = r\"Dataset/2018/regular_season/2018021200.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(path_json_file, 'r') as json_file:\n",
+    "    data = json.load(json_file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of event: 365\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_event = data['liveData']['plays']['allPlays']\n",
+    "print(f\"Number of event: {len(list_event)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>gamePk</th>\n",
+       "      <th>homeTeam</th>\n",
+       "      <th>period</th>\n",
+       "      <th>periodType</th>\n",
+       "      <th>periodTime</th>\n",
+       "      <th>periodTimeRemaining</th>\n",
+       "      <th>dateTime</th>\n",
+       "      <th>teamId</th>\n",
+       "      <th>teamName</th>\n",
+       "      <th>attackingSide</th>\n",
+       "      <th>teamTriCode</th>\n",
+       "      <th>eventType</th>\n",
+       "      <th>x-coordinate</th>\n",
+       "      <th>y-coordinate</th>\n",
+       "      <th>goalieName</th>\n",
+       "      <th>shooterName</th>\n",
+       "      <th>shotType</th>\n",
+       "      <th>isEmptyNet</th>\n",
+       "      <th>strength</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2018021200</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>1</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>00:35</td>\n",
+       "      <td>19:25</td>\n",
+       "      <td>2019-03-30T01:09:28Z</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>left</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>Shot</td>\n",
+       "      <td>-75.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>Darcy Kuemper</td>\n",
+       "      <td>Gabriel Landeskog</td>\n",
+       "      <td>Backhand</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018021200</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>1</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>01:44</td>\n",
+       "      <td>18:16</td>\n",
+       "      <td>2019-03-30T01:11:28Z</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>left</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>Shot</td>\n",
+       "      <td>-37.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Darcy Kuemper</td>\n",
+       "      <td>Tyson Barrie</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018021200</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>1</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>02:42</td>\n",
+       "      <td>17:18</td>\n",
+       "      <td>2019-03-30T01:13:23Z</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>left</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>Shot</td>\n",
+       "      <td>-80.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>Darcy Kuemper</td>\n",
+       "      <td>Colin Wilson</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2018021200</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>1</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>05:19</td>\n",
+       "      <td>14:41</td>\n",
+       "      <td>2019-03-30T01:16:58Z</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Arizona Coyotes</td>\n",
+       "      <td>right</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>Shot</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>Philipp Grubauer</td>\n",
+       "      <td>Richard Panik</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2018021200</td>\n",
+       "      <td>Colorado Avalanche</td>\n",
+       "      <td>1</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>05:53</td>\n",
+       "      <td>14:07</td>\n",
+       "      <td>2019-03-30T01:19:11Z</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Arizona Coyotes</td>\n",
+       "      <td>right</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>Shot</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Philipp Grubauer</td>\n",
+       "      <td>Lawson Crouse</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index      gamePk            homeTeam  period periodType periodTime  \\\n",
+       "0      0  2018021200  Colorado Avalanche       1    REGULAR      00:35   \n",
+       "1      1  2018021200  Colorado Avalanche       1    REGULAR      01:44   \n",
+       "2      2  2018021200  Colorado Avalanche       1    REGULAR      02:42   \n",
+       "3      3  2018021200  Colorado Avalanche       1    REGULAR      05:19   \n",
+       "4      4  2018021200  Colorado Avalanche       1    REGULAR      05:53   \n",
+       "\n",
+       "  periodTimeRemaining              dateTime  teamId            teamName  \\\n",
+       "0               19:25  2019-03-30T01:09:28Z      21  Colorado Avalanche   \n",
+       "1               18:16  2019-03-30T01:11:28Z      21  Colorado Avalanche   \n",
+       "2               17:18  2019-03-30T01:13:23Z      21  Colorado Avalanche   \n",
+       "3               14:41  2019-03-30T01:16:58Z      53     Arizona Coyotes   \n",
+       "4               14:07  2019-03-30T01:19:11Z      53     Arizona Coyotes   \n",
+       "\n",
+       "  attackingSide teamTriCode eventType  x-coordinate  y-coordinate  \\\n",
+       "0          left         COL      Shot         -75.0          -5.0   \n",
+       "1          left         COL      Shot         -37.0          33.0   \n",
+       "2          left         COL      Shot         -80.0          -6.0   \n",
+       "3         right         ARI      Shot          62.0         -23.0   \n",
+       "4         right         ARI      Shot          -7.0          36.0   \n",
+       "\n",
+       "         goalieName        shooterName    shotType isEmptyNet strength  \n",
+       "0     Darcy Kuemper  Gabriel Landeskog    Backhand        NaN    False  \n",
+       "1     Darcy Kuemper       Tyson Barrie  Wrist Shot        NaN    False  \n",
+       "2     Darcy Kuemper       Colin Wilson  Wrist Shot        NaN    False  \n",
+       "3  Philipp Grubauer      Richard Panik  Wrist Shot        NaN    False  \n",
+       "4  Philipp Grubauer      Lawson Crouse  Wrist Shot        NaN    False  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Extract_Previous_Event(list_event, current_sample_dateTime):\n",
+    "    previous_event = None\n",
+    "    for (idx_event, event) in enumerate(list_event):\n",
+    "        event_dateTime= str(event['about']['dateTime'])\n",
+    "        if event_dateTime.lower() == current_sample_dateTime:\n",
+    "            previous_event = list_event[idx_event - 1]\n",
+    "        else:\n",
+    "            continue\n",
+    "    return previous_event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Get_Info_Previous_Event(previous_event, ):\n",
+    "    event_type = previous_event['result']['event']\n",
+    "    coor_x = previous_event['coordinates']['x']\n",
+    "    coor_y = previous_event['coordinates']['y']\n",
+    "    event_period = previous_event['about']['period']\n",
+    "    event_periodTime = previous_event['about']['periodTime']\n",
+    "    \n",
+    "    return (event_type, coor_x, coor_y, event_period, event_periodTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current sample dateTime: 2019-03-30t01:09:28z\n"
+     ]
+    }
+   ],
+   "source": [
+    "idx_shot = 0\n",
+    "current_sample = df.iloc[idx_shot, :]\n",
+    "current_sample_dateTime = str(current_sample['dateTime']).lower()\n",
+    "print(f\"Current sample dateTime: {current_sample_dateTime}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'players': [{'player': {'id': 8474613, 'fullName': 'Derek Stepan', 'link': '/api/v1/people/8474613'}, 'playerType': 'Hitter'}, {'player': {'id': 8476455, 'fullName': 'Gabriel Landeskog', 'link': '/api/v1/people/8476455'}, 'playerType': 'Hittee'}], 'result': {'event': 'Hit', 'eventCode': 'COL101', 'eventTypeId': 'HIT', 'description': 'Derek Stepan hit Gabriel Landeskog'}, 'about': {'eventIdx': 4, 'eventId': 101, 'period': 1, 'periodType': 'REGULAR', 'ordinalNum': '1st', 'periodTime': '00:20', 'periodTimeRemaining': '19:40', 'dateTime': '2019-03-30T01:09:13Z', 'goals': {'away': 0, 'home': 0}}, 'coordinates': {'x': 62.0, 'y': -39.0}, 'team': {'id': 53, 'name': 'Arizona Coyotes', 'link': '/api/v1/teams/53', 'triCode': 'ARI'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "previous_event = Extract_Previous_Event(list_event, current_sample_dateTime)\n",
+    "print(previous_event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Event type: Hit\n",
+      "Event coor_x: 62.0\n",
+      "Event coor_y: -39.0\n",
+      "Event period: 1\n",
+      "Event period time: 00:20\n"
+     ]
+    }
+   ],
+   "source": [
+    "(event_type, coor_x, coor_y, event_period, event_periodTime) = Get_Info_Previous_Event(previous_event)\n",
+    "print(f\"Event type: {event_type}\")\n",
+    "print(f\"Event coor_x: {coor_x}\")\n",
+    "print(f\"Event coor_y: {coor_y}\")\n",
+    "print(f\"Event period: {event_period}\")\n",
+    "print(f\"Event period time: {event_periodTime}\")"
+   ]
   },
   {
    "cell_type": "code",
