done most of the code

--- a/milestone3/test_serving_flask_app.ipynb
+++ b/milestone3/test_serving_flask_app.ipynb
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IP = \"0.0.0.0\"\n",
+    "IP = \"127.0.0.1\"\n",
     "PORT = 5000\n",
     "\n",
     "BASE_URL = f\"http://{IP}:{PORT}\""
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -58,13 +58,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Test part 3"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -72,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "'j3DrC3ChXkR42WfPCUh5EIkye'"
+       "(4, 2)"
       ]
      },
      "execution_count": 2,
@@ -81,45 +74,100 @@
     }
    ],
    "source": [
-    "load_dotenv()\n",
-    "comet_api_key = os.environ.get(\"COMET_API_KEY\")\n",
-    "comet_api_key"
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df and df_new have the same structure\n",
+    "# and share a common identifier column (e.g., 'id')\n",
+    "\n",
+    "# Create sample data\n",
+    "data = {'id': [1, 2, 3, 4],\n",
+    "        'value': ['A', 'B', 'C', 'D']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'127.0.0.1'"
+       "   id value\n",
+       "5   6     F\n",
+       "6   7     G\n",
+       "7   8     H"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.environ.get(\"SERVING_IP\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workspace = r\"ift6758-b09-project\"\n",
-    "model_name=\"log_reg_dist\"\n",
-    "version = \"1.0.0\"\n",
+    "import pandas as pd\n",
     "\n",
-    "api = API(api_key=os.environ.get('COMET_API_KEY'))\n",
-    "models_dir = os.path.join(\"./\")\n",
-    "downloaded_model = api.get_model(workspace=workspace, model_name=model_name)\n",
-    "# downloaded_model.download(version, output_folder=models_dir, expand=True)"
+    "# Assuming df_old and df_new have the same structure\n",
+    "# and share a common identifier column (e.g., 'id')\n",
+    "\n",
+    "# Create sample data\n",
+    "data_old = {'id': [1, 2, 3, 4, 5],\n",
+    "            'value': ['A', 'B', 'C', 'D', 'E']}\n",
+    "df_old = pd.DataFrame(data_old)\n",
+    "\n",
+    "data_new = {'id': [1, 2, 3, 4, 5, 6, 7, 8],\n",
+    "            'value': ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H']}\n",
+    "df_new = pd.DataFrame(data_new)\n",
+    "\n",
+    "n_old_samples = df_old.shape[0]\n",
+    "n_new_samples = df_new.shape[0]\n",
+    "\n",
+    "df_new.iloc[n_old_samples:n_new_samples, :]"
    ]
   },
   {
